--- a/src/app/desarrollo-software/ServiciosPages.css
+++ b/src/app/desarrollo-software/ServiciosPages.css
@@ -49,6 +49,7 @@
   .mySwiperDs{
     width: 90%;
     margin-bottom: 100px;
+    height: auto;
   }
 
 
@@ -56,9 +57,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 90%;
-    margin: auto;
     background:linear-gradient(135deg,rgba(255, 255, 255, 0.034), rgba(255,255,255,0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -141,6 +139,15 @@
     display: none;
 }
 
+.preguntas_frecuentes{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.text_porqueGt_mobile{
+    display: none;
+}
+
 @media(max-width: 1309px){
     .beneficios{
         display: none;
@@ -148,6 +155,11 @@
     .beneficios_mobile{
         display: flex;
         flex-direction: column;
+        padding: 10px;
+    }
+    .beneficios_card{
+        width: 100%;
+        margin: auto;
     }
 }
 
@@ -168,6 +180,15 @@
     /* .container_porqueGt{
     
     } */
+}
+
+@media(max-width:665px){
+    .text_porqueGt{
+        display: none;
+    }
+    .text_porqueGt_mobile{
+        display: contents;
+    }
 }
 
 @media(max-width: 500px){
