--- a/src/app/desarrollo-software/ServiciosPages.css
+++ b/src/app/desarrollo-software/ServiciosPages.css
@@ -65,6 +65,8 @@
     padding: 20px;
     flex-wrap: wrap;
     border: 1px solid rgba(117, 117, 117, 0.276);
+    width: 90%;
+    margin: auto;
 }
 
 
