--- a/src/app/Footer/Footer.css
+++ b/src/app/Footer/Footer.css
@@ -1,10 +1,15 @@
 .containerFooter{
-    background-color: black;
+    background:linear-gradient(135deg,rgba(255, 255, 255, 0.034), rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    border-top: 1px solid rgba(128, 128, 128, 0.287);
+
 }
 .sectionContainerF{
     padding-top: 40px;
@@ -12,6 +17,13 @@
     justify-content: space-around;
     width: 100%;
     align-items: start;
+}
+
+.redesContainerFooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .logoFooter{
     display: flex;
@@ -21,8 +33,10 @@
 }
 .contact{
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-top: 20px;
+    text-align: center;
 }
 .linksContainerFooter{
     display: flex;
@@ -44,10 +58,19 @@
     padding-bottom: 30px;
     display: flex;
     align-items: center;
+    width: 95%;
+    color: gray;
+    border-top: 1px solid gray;
+    margin-top: 30px;
 }
 
 h3 {
     text-align: center;
+    text-decoration: underline;
+    text-decoration-color: #00fffb;
+    text-underline-offset: 7px;
+    text-decoration-thickness:5px;
+    margin-bottom: 10px;
 }
 
 a {
@@ -73,5 +96,6 @@ a {
     .redesContainerFooter{
         width: 50%;
         text-align: start;
+
     }
 }
