--- a/src/app/Servicios/Servicios.css
+++ b/src/app/Servicios/Servicios.css
@@ -183,7 +183,7 @@ display: none;
 #mobile{
   margin: auto;
   width: 300px;
-  height:450px;
+  height:auto;
 }
 
 .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
