--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -42,65 +42,17 @@
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 14px;
     overflow: hidden;
     transition: 0.5s;
-    font-size: 12.5px;
     margin: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .btnNav:hover{
-   color: white;
-   background:  #47fff94c; 
-   box-shadow: 0 0 10px #19fff6, 0 0 40px #19fff6, 0 0 80px #19fff6;
-   transition-delay: 1s;
-   border: none;
-   border-radius: none;
+   color: cyan;
 }
 
-
-.btnNav span{
-    position: absolute;
-    display: block;
-}
-
-.btnNav span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #19fff6);
-}
-
-.btnNav:hover span:nth-child(1){
-    left: 100%;
-    transition: 1s;
-
-}
-
-.btnNav span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #19fff6);
-}
-
-.btnNav:hover span:nth-child(3){
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
-
-}
-
-.btnNav span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #19fff6);
-}
 
 .logo {
     height: 120px;
@@ -109,22 +61,6 @@
 
 
 
-
-.nav_items a{
-    margin: 15px;
-    padding: 10px;
-    border-radius: 10px;
-    color: rgb(255, 255, 255);
-    position: relative;
-    text-decoration: none;
-    transition: 0.5s;
-}
-
-.nav_items a:hover{
-    background:  #47fff94c; 
-    box-shadow: 0 0 10px #19fff6, 0 0 40px #19fff6, 0 0 80px #19fff6;
-}
-
 .nav_toggle{
     display: none;
 }
@@ -132,7 +68,7 @@
 @media(max-width: 1200px){
     .nav_items{
         position: absolute;
-        top: 150px;
+        top: 110px;
         left: 0;
         display: flex;
         flex-direction: column;
