--- a/src/app/Servicios/Servicios.css
+++ b/src/app/Servicios/Servicios.css
@@ -14,7 +14,7 @@
   justify-content: top;
   padding: 40px;
   width: 430px;
-  height: auto;
+  height: 500px;
   text-align: center;
   border-radius: 15px;
   background:linear-gradient(315deg,rgba(0, 204, 255, 0.307),rgba(0, 208, 255, 0.117),rgba(255, 255, 255, 0.034), rgba(255, 255, 255, 0.034));
@@ -183,9 +183,29 @@ display: none;
 #mobile{
   margin: auto;
   width: 300px;
-  height:auto;
+  height:450px;
 }
 
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: 'next';
+  color: white;
+}
+
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: 'prev';
+  color: white;
+
+
+}
+
+#titleMobile{
+  font-size: 18px;
+}
+
+#btnConoceMasMobile{
+  padding: 10px;
+  font-size: 14px;
+}
 
 
 @media(max-width:940px) {
@@ -196,5 +216,5 @@ display: none;
 
 .container-servicios-web{
   display: none;
-  }
+}
 }
