--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,40 @@
     position: sticky;
 }
 
+.navbarUi{
+    height: 200px;
+    background-color: transparent;
+
+}
+
+
+
+
+
+.mobilNavMenu{
+    background:linear-gradient(135deg,rgba(255,255,255,0.1), rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border: solid 1px rgba(222, 218, 218, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    border-radius: 0;
+    top: 100px;
+}
+
+.navbarItemsContainer{
+    display: flex;
+    justify-content: space-around;
+}
+
+/* .logoNav{
+    width: 400px;
+} */
+
+.toggleMenuNavbar{
+    display: none;
+}
 
 .scrolled {
     background:linear-gradient(135deg,rgba(255,255,255,0.1), rgba(255,255,255,0));
