--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+*{
+  scroll-behavior: smooth;
+
+}
 body {
   background-blend-mode: darken;
   background: rgba(0, 0, 0, 0.755);
   background-image: url('../assets/fondo.gif');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 
