--- a/src/components/Contacto/Contacto.css
+++ b/src/components/Contacto/Contacto.css
@@ -57,7 +57,10 @@
     bottom: 20px; /* Ajusta esta propiedad para cambiar la distancia desde la parte inferior de la pantalla */
     left: 20px; /* Ajusta esta propiedad para cambiar la distancia desde la parte izquierda de la pantalla */
     z-index: 1000; /* Asegura que esté en la parte superior de otros elementos */
-    
+}
+
+.errors{
+    color: red;
 }
 
 @media(max-width:800px){
