--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 body {
   background-blend-mode: darken;
   background: rgba(0, 0, 0, 0.755);
-  background-image: url('../assets/fondo.gif');
+  background-image: url('../assets/fondo.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
