--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,11 @@
 body {
   background-blend-mode: darken;
   background: rgba(0, 0, 0, 0.755);
-  background-image: url('../assets/fondo.webp');
+  background-image: url('../assets/fondoGt.gif');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  
   color: white;
   width: 100%;
   height: 100%;
