--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,8 @@
 }
 body {
   background-blend-mode: darken;
-  background: rgba(0, 0, 0, 0.755);
-  background-image: url('../assets/fondoGt.gif');
+  background: rgba(0, 0, 0, 0.894);
+  background-image: url('../assets/fondoGt1.gif');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
