--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,7 @@
 
 }
 body {
-  background-blend-mode: darken;
-  background: rgba(0, 0, 0, 0.894);
-  background-image: url('../assets/fondoGt1.gif');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  
+  background-color: black;  
   color: white;
   width: 100%;
   height: 100%;
