--- a/src/app/AboutUs/AboutUs.css
+++ b/src/app/AboutUs/AboutUs.css
@@ -117,15 +117,42 @@
 
 
 @media(max-width:1404px){
+    .imageMac{
+        max-width: 600px;
+    }
     .main{
         flex-wrap: wrap;
         padding: 20px;
     }
     .aboutText{
-        width: 100%;
+        width: auto;
     }
 }
-
+@media(max-width:1250px){
+    .aboutText h1{
+        font-size: 100px;
+    }
+    .trans{
+        font-size: 15px;
+    }
+    .btnContactame{
+        font-size: 15px;
+    }
+}
+@media(max-width:1050px){
+    .imageMac{
+        max-width: 500px;
+    }
+    .aboutText h1{
+        font-size: 80px;
+    }
+    .trans{
+        font-size: 13px;
+    }
+    .btnContactame{
+        font-size: 12px;
+    }
+}
 @media(max-width: 890px){
     .note_container{
         display: none;
@@ -134,9 +161,26 @@
         width: 90%;
         padding: 10px;
     }
+    .imageMac{
+        max-width: 350px;
+        top: 32%;
+    }
+    .aboutText h1{
+        font-size: 70px;
+    }
+    .trans{
+        font-size: 10px;
+    }
+    .aboutText{
+        margin: 0;
+    }
 }
 
-
+@media(max-width: 660px){
+    .btnContactame{
+        font-size: 9px;
+    }
+}
 @media(max-width: 654px){
     .btnAbout{
         flex-direction: column;
@@ -145,6 +189,7 @@
     .btnContactame{
         width: 200px;
         justify-content: center;
+        width: auto;
     }
 
 }
@@ -152,5 +197,52 @@
 @media(max-width:563px){
     .textBienvenidosEra{
         font-size: 25px;
+    }
+}
+@media(max-width:535px){
+    .trans{
+        z-index: 1;
+    }
+    .imageMac{
+        max-width: 300px;
+        top: 25%;
+    }
+    .trans{
+        font-size: 8px;
+    }
+    .aboutText h1{
+        font-size: 47px;
+    }
+    .btnContactame{
+        text-align: center;
+        font-size: 7px;
+        width: 130px;
+    }
+}
+@media(max-width:419px){
+    .imageMac{
+        max-width: 220px;
+    }
+    .aboutText h1{
+        font-size: 40px;
+    }
+    .trans{
+        font-size: 6px;
+    }
+    .btnContactame{
+        font-size: 4px;
+        width: 100px;
+    }
+}
+@media(max-width:325px){
+    .aboutText h1{
+        font-size: 35px;
+    }
+    .imageMac{
+        max-width: 150px;
+        top: 23%;
+    }
+    .btnAbout{
+        margin-top: 20px;
     }
 }
