--- a/src/app/quienes-somos/QuienesSomos.css
+++ b/src/app/quienes-somos/QuienesSomos.css
@@ -3,13 +3,15 @@
     font-weight: 500;
     text-align: left;
 }
+.containerFull{
+    padding-top: 120px;
+}
 .AboutTexting{
     margin-bottom: 100px;
 }
 .AboutTexting p{
     font-size: 20px;
     font-weight: 400;
-    width: 1000px;
 }
 .botonAbout{
     margin: 20px;
@@ -19,4 +21,63 @@
     padding-top: 15px;
     font-size: 20px;
     padding-bottom: 15px;
+}
+@media(max-width:1200px){    
+    .quienesSomos{
+        font-size: 40px;
+    }
+    .AboutTexting p{
+        font-size: 15px;
+        margin: 0;
+    }
+    .quienContainer{
+        width: 700px;
+        text-align: justify;
+    }
+    .cita{
+        font-size: 10px;
+    }
+}
+@media(max-width:900px){
+   
+    .containerFull{
+        padding-top: 20px;
+    }
+}
+@media(max-width:840px){
+    .quienesSomos{
+        font-size: 32px;
+    }
+    .AboutTexting p{
+        font-size: 13px;
+    }
+    .containerFull{
+        padding-top: 0;
+    }
+    .quienContainer{
+        width: 550px;
+        text-align: justify;
+    }
+}
+@media(max-width:550px){
+    .quienesSomos{
+        font-size: 22px;
+    }
+    .quienContainer{
+        width: 400px;
+    }
+    .AboutTexting p{
+        font-size: 12px;
+    }
+    .botonAbout{
+        font-size: 12px;
+    }
+}
+@media(max-width:385px){
+    .quienesSomos{
+        font-size: 19px;
+    }
+    .quienContainer{
+        width: 320px;
+    }
 }
