--- a/src/components/Equipo/Equipo.css
+++ b/src/components/Equipo/Equipo.css
@@ -1,6 +1,6 @@
 .mySwiperEquipo{
   width: 78%;
-  margin: auto;
+  margin: 20px;
 }
 
   .cardEquipo{
@@ -28,7 +28,9 @@
     color: #C6C0C0;
     font-weight: bold;
   }
-
+  .tituloServiciosTeam{
+    font-size: 30px;
+  }
   .rolDescription{
     font-size: 14px;
     margin-top: 10px;
@@ -60,3 +62,36 @@
 
     margin-top: 10px;
   }
+  .cardTitleService{
+    font-size: 43px;
+  }
+  #equipo{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+@media(max-width:450px){
+  .tituloServiciosTeam{
+    font-size: 20px;
+  }
+  .cardEquipo{
+    width: 90%;
+    height: 80%;
+    padding: 0;
+    margin-left: 20px;
+  }
+  .mySwiperEquipo{
+    width: 100%;
+    margin: auto;
+  }
+  .cardTitleService{
+    font-size: 30px;
+  }
+  .rol{
+    font-size: 17px;
+  }
+  .rolDescription{
+    font-size: 10px;
+  }
+}
