--- a/src/app/AboutUs/AboutUs.css
+++ b/src/app/AboutUs/AboutUs.css
@@ -191,7 +191,9 @@
         justify-content: center;
         width: auto;
     }
-
+    .main{
+        margin-bottom: 100px;
+    }
 }
 
 @media(max-width:563px){
