--- a/src/app/marketing-digital/marketing.css
+++ b/src/app/marketing-digital/marketing.css
@@ -52,6 +52,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 520px;
     height: 366px;
     margin: 10px;
@@ -60,6 +61,8 @@
     background-color: #CC2525;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+
     align-items: center;
     width: 520px;
     height: 366px;
